tests/testthat/fixtures/parse-errors/error.R
# C1: parsing error on purpose
library(dplyr

a <- 1 + 1
